deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: biovalidator
  name: biovalidator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: biovalidator
  template:
    metadata:
      labels:
        app: biovalidator
    spec:
      imagePullSecrets:
        - name: $DOCKER_PULL_SECRET
      containers:
        - name: biovalidator
          image: $DOCKER_IMAGE_NAME
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
