service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biovalidator-service
spec:
  type: NodePort
  selector:
    app: biovalidator
  ports:
    - protocol: TCP
      port: 3020
      targetPort: 3020
      nodePort: 30080
