ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biovalidator-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /ait/biovalidator(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: biovalidator-service
                port:
                  number: 3020
